--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ body {
   color: #fff;
   font-weight: 550;
   font-size: 1.3rem;
-  transition: all 0.3s;
+  transition: all 1s;
 }
 
 #messageContainer {
@@ -66,10 +66,15 @@ body {
   margin-left: 10px;
   cursor: pointer;
 }
-.message {
+.message,
+.message1 {
   text-transform: capitalize;
-  background-color: #ccc;
+  background-color: #d8e8da;
   margin-right: 10px;
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
   padding: 10px;
+}
+.message1 {
+  color: #3e8d46;
+  text-align: end;
 }
